# Unified Rust workspace for all NebulaStream Rust crates.
# Add new crates here when introducing Rust code in any part of the project.
[workspace]
resolver = "2"
members = [
    "nes-io-runtime/rust/nes-io-runtime",
    "nes-io-runtime/rust/nes-io-runtime-bindings",
    "nes-memory/rust/nes-buffer-bindings",
    "nes-memory/rust/my-buffer-test",
    "nes-memory/rust/nes-buffer-runtime",
    "nes-network/network",
    "nes-common/rust/spdlog-bindings",
    "nes-common/rust/nes-config-options",
    "nes-plugins/Functions/RustAnswer/rust",
    "nes-sinks/rust/nes-sink-validation-bindings",
    "nes-sinks/rust/nes-sink-validation",
    "nes-sinks/rust/nes-sink-runtime-bindings",
    "nes-sinks/rust/nes-sink-runtime",
    "nes-sources/rust/nes-source-validation-bindings",
    "nes-sources/rust/nes-source-validation",
    "nes-sources/rust/nes-source-runtime-bindings",
    "nes-sources/rust/nes-source-runtime",
    "nes-plugins/Sinks/PrintSink",
    "nes-plugins/Sinks/VoidSink",
    "nes-plugins/Sinks/FileSink",
    "nes-plugins/Sinks/NetworkSink",
    "nes-plugins/Sources/FileSource",
    "nes-plugins/Sources/GeneratorSource",
    "nes-plugins/Sources/NetworkSource"
]

# Shared dependency declarations. Member crates use `dep.workspace = true`.
[workspace.dependencies]
nes_io_runtime = { path = "nes-io-runtime/rust/nes-io-runtime" }
nes_io_runtime_bindings = { path = "nes-io-runtime/rust/nes-io-runtime-bindings" }
nes_buffer_bindings = { path = "nes-memory/rust/nes-buffer-bindings" }
nes_buffer_runtime = { path = "nes-memory/rust/nes-buffer-runtime" }
nes_config_options = { path = "nes-common/rust/nes-config-options" }
nes_tokio_tcp_source = { path = "nes-plugins/tokio-tcp-source" }
nes_tokio_file_sink = { path = "nes-plugins/tokio-file-sink" }
nes_network = { path = "nes-network/network" }
nes_sink_validation_bindings = { path = "nes-sinks/rust/nes-sink-validation-bindings" }
nes_sink_validation = { path = "nes-sinks/rust/nes-sink-validation" }
nes_sink_runtime_bindings = { path = "nes-sinks/rust/nes-sink-runtime-bindings" }
nes_sink_runtime = { path = "nes-sinks/rust/nes-sink-runtime" }
nes_source_validation_bindings = { path = "nes-sources/rust/nes-source-validation-bindings" }
nes_source_validation = { path = "nes-sources/rust/nes-source-validation" }
nes_source_runtime_bindings = { path = "nes-sources/rust/nes-source-runtime-bindings" }
nes_source_runtime = { path = "nes-sources/rust/nes-source-runtime" }

serde_json = "1.0.149"
tokio = "1.52.0"
async-trait = "0.1.89"
cxx = "1.0.194"
linkme = "0.3.35"
tracing = "0.1.44"
io-uring = "0.7.11"
scopeguard = "1.2.0"