# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#    https://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "3"
members = [
    "nes-coordinator/model",
    "nes-coordinator/migration",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "=1.1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-json",
    "sqlite-use-returning-for-3_35",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "=0.8.2", default-features = false, features = ["sqlite"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }

migration = { path = "nes-coordinator/migration" }
